--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 /Clustering_Framework/FeatureEngineering/~$Features to Extract.xlsx
+/~$Counting C&Look DB.xlsx
